[Fix] Icon alignment in buttons and size for large button.

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -46,6 +46,7 @@
 		}
 
 		i {
+			vertical-align: middle;
 			// Most buttons will have icon on left so give default margin.
 			&:not(.sui-fw):not(.sui-loading) {
 				margin-right: 5px;
@@ -222,6 +223,9 @@
 
 			&.sui-button-ghost {
 				padding: 9px 20px 9px;
+			}
+			i {
+				font-size: 16px;
 			}
 
 			i:not(.sui-fw):not(.sui-loading) {
